# ImmichFrame.WebApi/Controllers/ConfigController.cs
@@ -10,11 +10,13 @@ namespace ImmichFrame.WebApi.Controllers
     {
         private readonly ILogger<AssetController> _logger;
         private readonly IClientSettings _settings;
+        private readonly ISettingsProvider _settingsProvider;
 
-        public ConfigController(ILogger<AssetController> logger, IClientSettings settings)
+        public ConfigController(ILogger<AssetController> logger, IClientSettings settings, ISettingsProvider settingsProvider)
         {
             _logger = logger;
             _settings = settings;
+            _settingsProvider = settingsProvider;
         }
 
         [HttpGet(Name = "GetConfig")]
@@ -22,7 +24,7 @@ namespace ImmichFrame.WebApi.Controllers
         {
             var sanitizedClientIdentifier = clientIdentifier.SanitizeString();
             _logger.LogDebug("Config requested by '{sanitizedClientIdentifier}'", sanitizedClientIdentifier);
-            return new ClientSettingsDto(_settings);
+            return new ClientSettingsDto(_settings, _settingsProvider.ContentRevision);
         }
 
         [HttpGet("Version", Name = "GetVersion")]
